[gd_scene load_steps=4 format=3 uid="uid://pes74ngvr24p"]

[ext_resource type="Script" path="res://addons/ply.scene_view_timemap_panel/dock.gd" id="1_2bpdv"]
[ext_resource type="Texture2D" uid="uid://c1ennc0sjr5v5" path="res://addons/ply.scene_view_timemap_panel/gui_resizer.svg" id="2_o53mr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1nbmp"]
bg_color = Color(0, 0, 0, 0)
draw_center = false

[node name="SceneViewTileMapDock" type="MarginContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 600.0
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 10
script = ExtResource("1_2bpdv")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="EditorContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResizeButton" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 10
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_1nbmp")
icon = ExtResource("2_o53mr")
icon_alignment = 1
expand_icon = true
